# unicode_ranges

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE-MIT  README.md  RELEASING.md  STABILITY.md  THIRD_PARTY_NOTICES.md  comparative_benchmarks.cpp  comparative_benchmarks.vcxproj  mkdocs.yml  source.cpp  unicode_ranges.cpp  unicode_ranges.hpp  unicode_ranges.slnx  unicode_ranges.vcxproj  unicode_ranges.vcxproj.filters  unicode_ranges_all.hpp  unicode_ranges_benchmarks.cpp  unicode_ranges_benchmarks.vcxproj  unicode_ranges_borrowed.hpp  unicode_ranges_full.hpp  unicode_ranges_tests.hpp  unicode_ranges_tests.vcxproj  unicode_ranges_tests.vcxproj.filters  unicode_tables_runtime.cpp  utf8_ranges_tests.hpp
.github/workflows/: ci.yml  docs.yml
cmake/: unicode_rangesConfig.cmake.in
comparative_benchmarks/: config.hpp  dependencies.json  framework.hpp  model.hpp
comparative_benchmarks/adapters/: simdutf.hpp  uni_algo.hpp  unicode_ranges.hpp  utfcpp.hpp
comparative_benchmarks/families/: utf_transcoding.hpp  utf_validation.hpp
docs/: benchmarking.md  casing-and-normalization.md  common-tasks.md  design.md  error-model.md  extensible-encodings.md  getting-started.md  index.md  install-and-integrate.md  licensing.md  text-operations.md  unicode-data.md
docs/examples/casing/: case-fold.cpp  ignore-case.cpp  locale-case.cpp  normalization-checks.cpp  normalization.cpp  partial-case.cpp  unicode-case.cpp
docs/examples/common-tasks/: convert-encodings.cpp  normalize-before-compare.cpp
docs/examples/encodings/: built-in-codecs.cpp  custom-ascii-codec.cpp  stateful-lossy-codec.cpp
docs/examples/getting-started/: formatting.cpp  runtime-validation.cpp  validated-view.cpp
docs/examples/reference/: character-ascii-predicates.cpp  character-ascii-transforms.cpp  character-checked-construction.cpp  character-constants.cpp  character-formatting.cpp  character-iteration.cpp  character-literals.cpp  character-namespaces.cpp  character-scalar-and-encoding.cpp  character-unchecked-construction.cpp  character-unicode-predicates.cpp  character-unicode-properties.cpp  characters.cpp  encodings.cpp  helper-views.cpp  literals-and-formatting.cpp  lossy-views.cpp  owning-strings.cpp
docs/examples/text-operations/: boundaries-and-graphemes.cpp  ref-qualified-ownership.cpp  reverse.cpp  search-and-replace.cpp  split-and-trim.cpp  views-pipeline.cpp
docs/reference/: chars.md  encodings.md  index.md  owning-strings.md  string-views.md  views-literals-formatting.md
release-notes/: 1.0.0.md  1.0.1.md  1.0.2.md
tools/: compile_docs_examples.sh  fetch_comparative_dependency.ps1  gen_unicode_tables.rs  generate_coverage.sh  measure_compile_time.sh  regenerate_unicode_tables.ps1  run_static_analysis.ps1  update_unicode_data.ps1
tools/benchmarks/: unicode_ranges_benchmarks.cpp  unicode_ranges_benchmarks.vcxproj  unicode_ranges_benchmarks.vcxproj.filters
tools/comparative_benchmarks/: comparative_benchmarks.vcxproj  corpora.hpp  dependencies.json  framework.hpp  main.cpp  model.hpp
tools/comparative_benchmarks/adapters/: unicode_ranges.hpp
tools/comparative_benchmarks/families/: utf_transcoding.hpp
tools/compile_time/probes/: all.cpp  borrowed.cpp  owning_runtime.cpp
tools/package_smoke_consumer/: CMakeLists.txt
tools/release_smoke_consumer/: CMakeLists.txt  main.cpp
tools/unicode_data/: README.md
unicode_ranges/: characters.hpp  core.hpp  encoding.hpp  grapheme_cluster_view.hpp  transcoding.hpp  transcoding_utf32.hpp  unicode_tables.hpp  unicode_tables_constexpr.hpp  utf16_char.hpp  utf16_string.hpp  utf16_string_crtp.hpp  utf16_string_view.hpp  utf16_views.hpp  utf32_char.hpp  utf32_string.hpp  utf32_string_crtp.hpp  utf32_string_view.hpp  utf32_views.hpp  utf8_char.hpp  utf8_string.hpp  utf8_string_crtp.hpp  utf8_string_view.hpp  utf8_views.hpp
unicode_ranges/internal/: simdutf_haswell_utf8_to_utf16.hpp  simdutf_haswell_utf8_to_utf32.hpp  simdutf_haswell_utf8_validate.hpp  simdutf_runtime.hpp  simdutf_utf8_scalar_validate.hpp  simdutf_utf8_to_utf16_tables.hpp  unicode_tables_runtime_support.hpp  utf32_parallel_runtime.hpp
utf8_ranges/: core.hpp  string.hpp  unicode_tables.hpp  utf16_char.hpp  utf16_string.hpp  utf16_string_crtp.hpp  utf16_string_view.hpp  utf8_char.hpp  utf8_string.hpp  utf8_string_crtp.hpp  utf8_string_view.hpp  views.hpp
